added the temporary background

--- a/index.html
+++ b/index.html
@@ -22,23 +22,14 @@
   <link rel="stylesheet" type="text/css" href="assets\stylesheets\index.css">
 </head>
 <body>
-  <header class="navbar navbar-inverse navbar-fixed-top" style="height: 80px">
+  <header class="navbar navbar-fixed-top" style="background-color: #fff">
     <div class="container-fluid">
-      <p id="logo">Cathal Chaffee</p>
+      <img id="logo" src="assets\images\logo.png" style="width: 100px">
     </div>
   </header>
-  <div class="jumbotron" style="background-color: #1a4c11">
-    <div class="container">
-      <div class="col-xs-4">
-        <h1 id="main-head">Cathal Chaffee</h1>
-        
-      </div>
-      <div style="margin-top: 25px" class="container">
-        <div class="col-md-offset-6">
-          <img src="assets\images\cah.png" width="300">
-        </div>
-      </div>
-    </div>
+  <img src="assets\images\snowirons.jpg" class="banner-img affix">   
+  <div id="welcome-banner" class="jumbotron">
+    
   </div>
   <input type="text" name="theThing" onchange="response = theThing + ' it worked'">
   <script>
