--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   
   <!-- gotten from slides example http://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+  <!-- style sheet from http://www.w3schools.com/lib/w3.css -->
+  <link rel="stylesheet" href="assets\stylesheets\w3styles.css">
 </head>
 <body>
   <header class="navbar navbar-fixed-top" style="background-color: #fff">
