added the about part of the about page

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         </ul>
       </div>
     </header>
+    <!-- Background images html -->
     <div id="positioned">
-      <img src="app\assets\images\snowirons.jpg" class="slides-img banner-img affix">
-      <img src="app\assets\images\winter_plain.jpg" class="slides-img banner-img affix">
-      <img src="app\assets\images\winter_river.jpg" class="slides-img banner-img affix">
+      <img src="app\assets\images\snowirons.jpg" class="background-img slides-img banner-img affix">
+      <img src="app\assets\images\winter_plain.jpg" class="background-img slides-img banner-img affix">
+      <img src="app\assets\images\winter_river.jpg" class="background-img slides-img banner-img affix">
     
       <a class="w3-btn-floating noselection w3-display-topleft w3-hover-dark-grey nonderline" style="top:45%" onclick="plusImg(-1)"><</a>
       <a class="w3-btn-floating noselection w3-display-topright w3-hover-dark-grey nonderline" style="top:45%" onclick="plusImg(+1)">></a>
@@ -51,6 +52,7 @@
       <button type="button" class="btn btn-default bolded" onclick="location.href='app/views/about.html'">About</button>
       <button type="button" class="btn btn-default bolded">Blog</button>
     </div>
+    <!-- All JavaScript code -->
     <script>
       var myVar = setInterval(myCall, 10000);
       var index = 1;
